# vid2gif-webui

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  VERSIONS.md  docker-compose.dev.yaml  docker-compose.yaml  project-overview.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: build-docker-on-main.yaml  pr-ci.yaml
backend/: app.py
frontend/: index.html  script.js  style.css
tests/: test_backend_app_flow.py  test_cleanup_jobs.py  test_concurrency_limit.py  test_scale_validation.py  test_services.py
vid2gif/: __init__.py  main.py
vid2gif/backend/: app.py
vid2gif/backend/services/: __init__.py  command_runner.py  conversion.py  conversion_strategy.py  ffmpeg_runner.py  file_manager.py  job_store.py
vid2gif/backend/utils/: constant.py  env_loader.py
vid2gif/frontend/: index.html  style.css
